rnsc/test_data/integration/error/parser/outside_class_directive/before_class_dir/super_keyword.rns
; some comment
; another comment
super
.class public HelloWorld
.super java/lang/Object
